--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,34 @@
   width: 3em;
   font-size: 2em;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  margin: 1em;
+  margin: 20px 40px;
   user-select: none;
+  background-color: rgb(252, 178, 67);
+  border: 1px solid black;
  }
  .activeCard {
-  color: red;
-  background: pink;
+  color: green;
+  background: violet;
+ }
+body {
+  text-align: center;
+  background-color: rgb(236, 98, 98);
+  padding: 20px 200px;
+ }
+ .p1{
+  display: inline-block;
+  text-align: center;
+  font-size: 2em;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 200px;
+  height: 45px;
+  border: 1px solid black;
+  background-color: rgb(252, 178, 67);
+ }
+ .p2{
+  font-size: 2em;
+  text-align: left;
+  margin: 20px 70px;
  }
   
